# gr-devsync

./: CMakeLists.txt  README.md
cmake/Modules/: devsyncConfig.cmake
docs/: README.devsync
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: sample_synchronizer.grc  top_block.py
grc/: CMakeLists.txt  devsync_alligner.xml  devsync_peak_detector.xml  devsync_rms_normalization.xml
include/devsync/: CMakeLists.txt  alligner.h  api.h  log.h  peak_detector.h  rms_normalization.h
lib/: CMakeLists.txt  alligner_impl.cc  alligner_impl.h  peak_detector_impl.cc  peak_detector_impl.h  rms_normalization_impl.cc  rms_normalization_impl.h
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  devsync_swig.i
